# kanboard-tasks-from-email

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yaml
src/: tasks_from_email.py  tasks_from_email_config.py  test_convert_to_kb_date.py  test_create_user_for_sender.py  test_get_task_if_subject_matches.py  test_handle_well_known_forwarders.py  test_imap.py  test_main.py  test_reopen_and_update.py  test_walk_message_parts.py
tests/: conftest.py  test_convert_to_kb_date.py  test_create_user_for_sender.py  test_get_task_if_subject_matches.py  test_handle_well_known_forwarders.py  test_imap.py  test_main.py  test_reopen_and_update.py  test_walk_message_parts.py
