[tool.poetry]
name = "kanboard_tasks_from_email"
version = "0.0.0" # 0.0.0 placeholder is replaced on release
description = "Script to create kanboard tasks from email"
repository = "https://github.com/radiorabe/kanboard-tasks-from-email"
authors = ["IT Reaktion <it@rabe.ch>"]
license = "AGPL-3"
readme = "README.md"
packages = [{include = "src/tasks_from_email.py" }]

[tool.poetry.scripts]
kanboard-tasks-from-email = 'tasks_from_email:main'

[tool.poetry.dependencies]
python = "^3.11"
kanboard = "^1.1.5"
ConfigArgParse = "^1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-freezegun = "^0.4.2"
pytest-mock = "^3.14.0"
pytest-random-order = "^1.1.1"
pytest-ruff = "^0.3.1"
ruff = "^0.3.5"

[tool.pytest.ini_options]
minversion = "8.1"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=src --cov-fail-under=100 --cov-report=html --ruff --mypy --ignore docs/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
